# KohakuHPO

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md  extending.md  gpu.md  interfaces.md  optimizers.md  s3turbo-method.md
examples/: 01_quickstart_closure.py  02_ask_tell.py  03_iterator.py  04_custom_components.py  05_gpu_and_vectorized.py  06_compare_optimizers.py  07_rect_collage.py  08_sklearn_hpo.py  09_sklearn_automl_hpo.py  10_adaptive_mask.py  11_benchmark_suite.py  12_reactive_scout.py
src/kohakuhpo/: __init__.py  device.py  optimizer.py  registry.py  run.py  space.py  study.py
src/kohakuhpo/benchmarks/: __init__.py  classic.py  manybasin.py
src/kohakuhpo/optimizers/: __init__.py  cmaes.py  gpbo.py  hebo.py  random.py  turbo.py
src/kohakuhpo/optimizers/s3turbo/: __init__.py  masks.py  optimizer.py  regions.py  scouts.py
src/kohakuhpo/surrogate/: __init__.py  acquisition.py  gp.py
tests/: conftest.py  test_optimizer_contract.py  test_registry.py  test_s3turbo.py  test_space.py  test_study.py  test_surrogate.py
webpage/: README.md  index.html  make_data.py
webpage/css/: style.css
webpage/js/: common.js  demo-adaptive.js  demo-mask.js  demo-playground.js  demo-ts.js  main.js
