[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kohakuhpo"
version = "0.1.0"
description = "Sample-efficient black-box optimization (HPO and beyond): S3-TuRBO plus clean reimplementations of standard baselines behind one ask/tell core, on numpy + torch (CPU/GPU)."
authors = [
    { name = "Shih-Ying Yeh(KohakuBlueLeaf)", email = "apolloyeh0123@gmail.com" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "cmaes",
    "tqdm",
    "matplotlib",
]
keywords = [
    "black-box-optimization",
    "bayesian-optimization",
    "hyperparameter-optimization",
    "gaussian-process",
    "trust-region",
    "thompson-sampling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
urls = { Homepage = "https://github.com/KohakuBlueleaf/KohakuHPO" }

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]
real = ["scikit-learn"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length is black's job

[tool.ruff.lint.isort]
known-first-party = ["kohakuhpo"]
